# mutation-engine-new

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  STYLE_GUIDE.md
.github/workflows/: build-windows.yml
cmake/: CMake-Clean-VS2022-x64.bat  CMakeShared.cmake
dev/src/common/: debug.cpp  debug.h  types.h
dev/src/engine/: ecs_component.cpp  ecs_component.h  ecs_entity.cpp  ecs_entity.h  ecs_manager.cpp  ecs_manager.h  ecs_system.cpp  ecs_system.h  engine_application.h  entity.cpp  entity.h  mutation_engine.cpp  mutation_engine.h  renderer.cpp  renderer.h  utils.h
dev/src/game/: game.cpp  game.h  game_main.cpp  level.cpp  level.h
src/: main.cpp
src/common/: debug.cpp  debug.h
src/engine/: entity.h  mutation_engine.cpp  mutation_engine.h  renderer.cpp  renderer.h  system.h
src/game/: game.cpp  game.h  game_main.cpp
